<resources>
    <string name="app_name">AmiiboRepo</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="empty">We were unable to return any results.</string>
    <string name="purchase">Purchase This Amiibo</string>
    <string name="purchased">Purchased!</string>
    <string name="filter_amiibos">Filter</string>
    <string name="filter_purchased">View Purchased</string>
    <string name="view_all">View All</string>
    <string name="add_amiibo">Add</string>
    <string name="camera_error">Something went wrong delegating to camera</string>
    <string name="character_name">Character</string>
    <string name="series_name">Series</string>
    <string name="type_name">Type</string>
    <string name="owned_amiibo">Have you purchased this Amiibo?</string>
    <string name="click_camera">Click camera to add your image</string>
    <string name="successful_save">Successful Save</string>
    <string name="successful_save_message">We have put your Amiibo in your ROOM feel free to leave this page and return to the list</string>
    <string name="ok">OK</string>
    <string name="delete_amiibo">Delete</string>
    <string name="create">Create Amiibo!</string>
</resources>