<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        tools:context=".ui.add.AddFragment">

        <ImageView
            android:id="@+id/sampleImage"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:padding="4dp"
            android:src="@android:drawable/ic_menu_camera"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/click_camera_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/click_camera"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sampleImage" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/characterName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/character_name"
            android:padding="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/click_camera_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/characterNameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/seriesName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/series_name"
            android:padding="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/characterName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/seriesNameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/typeName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/type_name"
            android:padding="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/seriesName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/typeNameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"/>

        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/purchasedCheck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:padding="4dp"
            android:text="@string/owned_amiibo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/typeName" />

        <Button
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/accent_color"
            android:text="@string/create"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/purchasedCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>